# apps/api/src/orders/order.module.ts
@@ -2,5 +2,6 @@ import { Module } from "@nestjs/common";
 import { PromotionModule } from "../promotions/promotion.module";
 import { AdminOrderController, BuyerOrderController } from "./order.controller";
 import { OrderService } from "./order.service";
-@Module({imports:[PromotionModule],controllers:[BuyerOrderController,AdminOrderController],providers:[OrderService],exports:[OrderService]})
+import { SandboxShipmentTrackingProvider } from "./sandbox-shipment-tracking.provider";
+@Module({imports:[PromotionModule],controllers:[BuyerOrderController,AdminOrderController],providers:[OrderService,SandboxShipmentTrackingProvider],exports:[OrderService]})
 export class OrderModule {}
